--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "html-loader": "^5.0.0",
     "inline-source-map": "^0.6.3",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
