--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^5.0.3"
   },
   "dependencies": {
+    "handlebars": "^4.7.8",
     "html-webpack-plugin": "^5.6.0",
     "webpack-merge": "^5.10.0"
   }
