--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "handlebars": "^4.7.8",
     "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "inline-source-map": "^0.6.3",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
@@ -37,11 +38,7 @@
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.3"
-  },
-  "dependencies": {
-    "handlebars": "^4.7.8",
-    "html-webpack-plugin": "^5.6.0",
+    "webpack-dev-server": "^5.0.3",
     "webpack-merge": "^5.10.0"
   }
 }
