--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint-plugin-svelte": "^2.35.1",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.1.2",
+    "sass": "^1.75.0",
     "svelte": "^4.2.7",
+    "svelte-preprocess": "^5.1.4",
     "vite": "^5.0.3"
   },
   "type": "module"
